# tic-tac-toe-machine-learning

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
ai-agent/: .gitignore  README.md  ai-notes.txt  create-training-data.py  player-server.py  randomutil.py  requirements.txt  t3dqn.py  t3stats.py  train-model.py  viewstats.py
ai-agent/data/: init_train_config.json
ai-agent/src/: distribution.py  t3encoder.py  t3train.py  t3train_offline.py  train_offline.py
ai-agent/src/dataset/: offline_dataset.py
ai-agent/src/model/: t3dqn.py
ai-agent/src/server/: t3server.py
ai-agent/src/utils/: device_util.py
game/: package-lock.json  package.json  webpack.config.js
game/config/: default.json  docker.json
game/html/: game.css  game.html
game/src/: bitencoder.js  console-game.js  game.js  onehotencoder.js  web-game.js
game/src/player/: console-human-player.js  heuristic-player.js  player.js  random-player.js  web-player.js
game/src/renderer/: console-renderer.js
game/src/states/: game-states.js  save-result.js
utils/apis/t3server/: bruno.json  choice.bru  ping.bru  reload.bru
utils/notebooks/: t3-training.ipynb
